2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog, init.c: Clean up and now works on PowerPC/ep5200.

2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* init.c: Clean up and now works on ep5200.
	* mon.c: New file.

2007-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog, rootfs/etc/host.conf, rootfs/etc/hosts: New files.

2007-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	Initial add of NFS Client test.
	* .cvsignore, Makefile, dirutils.c, init.c, rootfs/rtems_logo.jpg:
	New files.
